dongle-smartcontract/test_results_v13.txt
   Compiling dongle-contract v0.1.0 (C:\Users\user\Dongle-Smartcontract\dongle-smartcontract)
error[E0425]: cannot find type `ProjectRegistrationParams` in this scope
  --> src\lib.rs:39:17
   |
39 |         params: ProjectRegistrationParams,
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this struct
   |
22 + use crate::types::ProjectRegistrationParams;
   |

error[E0425]: cannot find type `ProjectUpdateParams` in this scope
  --> src\lib.rs:46:17
   |
46 |         params: ProjectUpdateParams,
   |                 ^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this struct
   |
22 + use crate::types::ProjectUpdateParams;
   |

warning: unused import: `Vec`
 --> src\types.rs:1:50
  |
1 | use soroban_sdk::{Address, String, contracttype, Vec};
  |                                                  ^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::errors::ContractError as Error`
 --> src\test.rs:3:5
  |
3 | use crate::errors::ContractError as Error;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::types::VerificationStatus`
 --> src\test.rs:4:5
  |
4 | use crate::types::VerificationStatus;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Vec`
 --> src\test.rs:8:58
  |
8 | use soroban_sdk::{Address, Env, String as SorobanString, Vec};
  |                                                          ^^^

error[E0061]: this method takes 1 argument but 7 arguments were supplied
   --> src\review_registry.rs:211:33
    |
211 |         let project_id = client.register_project(&owner, &name, &desc, &cat, &None, &None, &None);
    |                                 ^^^^^^^^^^^^^^^^
    |
note: method defined here
   --> src\lib.rs:37:12
    |
 37 |     pub fn register_project(
    |            ^^^^^^^^^^^^^^^^
help: remove the extra arguments
    |
211 -         let project_id = client.register_project(&owner, &name, &desc, &cat, &None, &None, &None);
211 +         let project_id = client.register_project(&owner);
    |

For more information about this error, try `rustc --explain E0425`.
warning: `dongle-contract` (lib) generated 1 warning (1 duplicate)
error: could not compile `dongle-contract` (lib) due to 2 previous errors; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
Some errors have detailed explanations: E0061, E0425.
For more information about an error, try `rustc --explain E0061`.
warning: `dongle-contract` (lib test) generated 4 warnings
error: could not compile `dongle-contract` (lib test) due to 3 previous errors; 4 warnings emitted
